<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_title"
        android:textAppearance="?textAppearanceTitleLarge"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/login_userid_input_hint"
        app:startIconDrawable="@drawable/ic_person"
        android:autofillHints="username">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pin_input_hint"
        android:layout_marginBottom="12dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_pin"
        android:autofillHints="password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_submit"
        android:enabled="false"
        app:icon="@drawable/ic_login"
        app:iconGravity="textStart"/>
</LinearLayout>