<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:background="@drawable/m3_bottom_sheet_drag_handle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/poin_menu_add"
        android:textAppearance="?textAppearanceTitleLarge"
        android:paddingVertical="14dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/poin_date_input_hint"
        app:startIconDrawable="@drawable/ic_calendar">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/poin_weight_input_hint"
        app:startIconDrawable="@drawable/ic_weight">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_bobot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/poin_info_input_hint"
        app:startIconDrawable="@drawable/ic_info">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:enabled="false"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"/>
</LinearLayout>