<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:background="@drawable/m3_bottom_sheet_drag_handle" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pilih menu:"
        android:paddingHorizontal="18dp"
        android:paddingVertical="6dp"
        android:textAppearance="?textAppearanceTitleLarge" />
    <LinearLayout
        android:id="@+id/layout_add"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tint="?colorPrimary"
            android:src="@drawable/ic_add"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:textAppearance="?textAppearanceBodyLarge"
            android:text="@string/poin_menu_add" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_save"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tint="@android:color/holo_blue_dark"
            android:src="@drawable/ic_save"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:textAppearance="?textAppearanceBodyLarge"
            android:text="@string/poin_menu_save" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_write"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tint="@android:color/holo_green_dark"
            android:src="@drawable/ic_save_as"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:textAppearance="?textAppearanceBodyLarge"
            android:text="@string/poin_menu_write" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_delete"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tint="@android:color/holo_red_dark"
            android:src="@drawable/ic_delete"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:textAppearance="?textAppearanceBodyLarge"
            android:text="@string/poin_menu_delete" />
    </LinearLayout>
</LinearLayout>